# bevad

./: .gitignore  LICENSE  README.md  index.html  inference.py  pyproject.toml  ruff.toml
bevad/: .gitignore  LICENSE  README.md  b2d_agent.json  pyproject.toml  ruff.toml
bevad-sim/: LICENSE  README.md  pyproject.toml  ruff.toml
bevad-sim/src/bevad_sim/: __init__.py  version.py
bevad-sim/src/bevad_sim/data_interface/: __init__.py  action.py  base_entity.py  configurator.py  core_container.py  data_types.py  episode_io.py  episode_map.py  episode_meta.py  fragment_cache.py  odometry.py  routing_information.py  serialize_objects.py  step_meta.py  tce.py  tensor_observation.py  world_state.py
bevad-sim/src/bevad_sim/data_interface/transforms/: base_transform.py  obs_transform.py  select_ego.py  util_transform.py
bevad-sim/src/bevad_sim/simulation/agent/: base_agent.py  replay_agent.py
bevad-sim/src/bevad_sim/simulation/carla/: base_wrappers.py  env_registry.py  eval.py  extended_route_scenario.py  labels.py  leaderboard_tools.py  parked_vehicles.py  route_planner.py  sensor.py  simulator.py  utils.py
bevad-sim/src/bevad_sim/simulation/carla/custom_scenarios/: random_background_activity.py
bevad-sim/src/bevad_sim/simulation/carla/observer/: carla_map_converter.py  carla_observer.py  extractor.py
bevad-sim/src/bevad_sim/simulation/carla/pdm_lite_expert/: config.py  kinematic_bicycle_model.py  lateral_controller.py  longitudinal_controller.py  nav_planner.py  pdm_lite.py  privileged_route_planner.py  route_manipulation.py  scenario_logger.py  transfuser_utils.py
bevad-sim/src/bevad_sim/simulation/carla/sensors/: camera.py  lidar.py
bevad-sim/src/bevad_sim/simulation/engine/: gym_wrappers.py  simulator_interface.py  simulator_loop.py
bevad-sim/src/bevad_sim/utils/: transforms.py
bevad/bevad/: replay.py  train.py
bevad/bevad/agent/: bevad_agent.py  bevad_openloop_agent.py  pid_controller.py
bevad/bevad/b2d/: analyze.py  multi_ability.py  score.py
bevad/bevad/configs/cvpr/: bev-notok4-masked.py  bev-tok1-full.py  bev-tok1-masked.py  bev-tok2-masked.py  bev-tok4-masked-front.py  bev-tok4-masked-noaug.py  bev-tok5-masked.py  bevad-baseline.py  diffusion-entangled.py  point-estimator-disentangled.py  point-estimator-entangled.py  pretrain.py  scaling_diffusion.py  scaling_point_estimator.py
bevad/bevad/data/: core_dataset.py  map_utils.py  sampler.py
bevad/bevad/modules/: __init__.py  bevad.py  bevad_lightning.py
bevad/bevad/modules/backbone/: radio.py  resnet.py
bevad/bevad/modules/bev/: LICENSE  __init__.py  attention.py  bev_backbone.py  bev_decoder.py  bevformer_encoder.py  detection_head.py
bevad/bevad/modules/map/: map_head.py
bevad/bevad/modules/plan/: __init__.py  diffusion_utils.py  disentangled_decoder.py  disentangled_diffusion_planner.py  disentangled_point_estimator_planner.py  entangled_diffusion_planner.py  entangled_point_estimator_planner.py  path_decoder.py  rollout.py
bevad/bevad/modules/util/: bev_crop.py  bev_pe.py  deformable_attention.py  diffusion.py  memory.py
data/b2d-xml/: b2d-10857.xml  b2d-11381.xml  b2d-11715.xml  b2d-11755.xml  b2d-14194.xml  b2d-14842.xml  b2d-14862.xml  b2d-14909.xml  b2d-1711.xml  b2d-17563.xml  b2d-17569.xml  b2d-17598.xml  b2d-17635.xml  b2d-17655.xml  b2d-1773.xml  b2d-17752.xml  b2d-1790.xml  b2d-1792.xml  b2d-1825.xml  b2d-18252.xml  b2d-18305.xml  b2d-18311.xml  b2d-1833.xml  b2d-18356.xml  b2d-1852.xml  (+195 more)
(+4 files in other folders)
