[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bevad"
version = "0.1.0"
description = "Add your description here"
requires-python = "~=3.10.0"
dependencies = [
    "accelerate>=1.7.0",
    "diffusers>=0.33.1",
    "einops",
    "bevad-sim>=0.5.5",
    "lightning>=2.5.5",
    "mb-mmcv==0.1.1",
    "numpy==1.21.5",
    "peft>=0.17.0",
    "polars>=1.32.2",
    "schedulefree",
    "scikit-learn",
    "timm>=1.0.19",
    "torch==2.7.1",
    "transformers~=4.57.6",
    "wandb",
]

[project.optional-dependencies]
carla = [
    "bevad-sim[carla]>=0.5.5",
]

[tool.hatch.build.targets.wheel]
packages = ["bevad"]
